@@ -344,7 +344,8 @@ AC_ARG_ENABLE(cmdlib, [  --enable-cmdlib         Build shared command library],
 CMDLIB=$enableval, CMDLIB=no)
 AC_MSG_RESULT($CMDLIB)
 
-if test x$CMDLIB = xyes; then
+if test x$CMDLIB = xyes -o x$CLVMD != none; then
+	CMDLIB="yes"
 	CFLAGS="$CFLAGS -DCMDLIB"
 fi
 
